--- a/themes/site-theme/layouts/partials/header.html
+++ b/themes/site-theme/layouts/partials/header.html
@@ -4,6 +4,17 @@
 }
 </style>
 
+<noscript>
+  <style>
+    .google-map {
+      display: none;
+    }
+    .main-carousel {
+      display: none;
+    }
+  </style>
+</noscript>
+
 <div id="header-functions" class="">
   {{ if eq .Site.Params.extra_tools.floating_header true }}
   <div id="headerFloatingHeightFix" class="" ></div>
