--- a/themes/site-theme/layouts/404.html
+++ b/themes/site-theme/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "header" }}{{ partial "header.html" . }}{{ end }}
 {{ define "main" }}
-  <article class="py-5 text-center">
+  <article class="pt-5 pb-80 text-center">
     <h1 class='{{ partial "gCSS/type/heading.txt"}} text-5xl pb-8'>
       404 Page Not Found
     </h1>
