lazy load images

--- a/themes/site-theme/layouts/partials/header.html
+++ b/themes/site-theme/layouts/partials/header.html
@@ -2,6 +2,10 @@
 .header-container {
   transition: .3s;
 }
+.lzy-bk {
+   background-image: none !important;
+   background-color: #F1F1FA;
+}
 </style>
 
 <noscript>
